[package]
name    = "huerkle-puzzo"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Stepan Dolgorukov <dolgorukovpro@gmail.com>"]

[[bin]]
name = "hupu"
path = "main.rs"

[dependencies]
aes-gcm = "0.10"
pbkdf2  = "0.12"
rand    = "0.8"
serde   = { version = "1", features = ["derive"] }
bincode = "1"
clap    = { version = "4", features = ["derive"] }
hex     = "0.4"
sha2    = "0.10"
